chapter_argo-rollouts/app/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: handson
  labels:
    app: handson
spec:
  replicas: 10
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: handson
  template:
    metadata:
      labels:
        app: handson
    spec:
      containers:
      - name: handson
        image: argoproj/rollouts-demo:green
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      steps:
      - setWeight: 20
      - pause: {}
